match on patient result status / job updates

--- a/cdx_core/app/assets/stylesheets/layouts/_notification.scss
+++ b/cdx_core/app/assets/stylesheets/layouts/_notification.scss
@@ -1,3 +1,13 @@
+.notification-subheader {
+  &.notification-subheader--filters {
+    .topfilteropt {
+      float: none;
+      position: absolute;
+      right: 10px;
+    }
+  }
+}
+
 .notification, .notification.testflow {
   .container {
     .bettertabs {
