--- a/cdx_core/app/views/notification_notices/index.html.haml
+++ b/cdx_core/app/views/notification_notices/index.html.haml
@@ -1,8 +1,11 @@
 - content_for(:subheader) do
-  .row.center.add-new.collapse.settings
-    .col.pe-10
-      %h2
-        = I18n.t('notification_notices.index.title')
+  .notification-subheader.notification-subheader--filters
+    .row.center.add-new.collapse
+      .col.pe-10
+        %h2
+          = link_to [:alerts], class: 'side-link', title: I18n.t('views.back') do
+            = image_tag "arrow-left-white.png"
+          = I18n.t('notification_notices.index.title')
 
 .row.paginationHeader
   .small-12.columns.box
