--- a/cdx_core/app/views/patients/show.html.haml
+++ b/cdx_core/app/views/patients/show.html.haml
@@ -12,3 +12,9 @@
     = render partial: 'patient_episode_summary', locals: { total_episodes: @patient.episodes.count, patient: @patient }
 
     = render partial: 'patient_history', locals: { patient: @patient, can_add_test_orders: @patient.episodes.count > 0 }
+
+:javascript
+  Mousetrap.bind('alt+t', function(e) {
+    Turbolinks.visit('#{new_encounter_path(mode: 'fresh_tests', patient_id: @patient.id)}');
+    Mousetrap.unbind('alt+t');
+  });
