--- a/cdx_core/app/views/xpert_results/show.haml
+++ b/cdx_core/app/views/xpert_results/show.haml
@@ -73,3 +73,11 @@
               = XpertResult.human_attribute_name(:comment)
           .col-6
             = simple_format(@xpert_result.comment)
+
+- if Policy.can?(Policy::Actions::APPROVE_ENCOUNTER, Encounter, current_user)
+  .row
+    = react_component 'ShowApproveTestResult',
+      resultId: @xpert_result.id,
+      commentValue: @xpert_result.comment,
+      updateResultUrl: encounter_patient_results_path(@encounter),
+      rejectReasons: FeedbackMessages::Presenter.reject_reasons_category(@encounter.institution, 'labTech')
