Update variable name.

--- a/cdx_core/app/views/culture_results/show.haml
+++ b/cdx_core/app/views/culture_results/show.haml
@@ -75,4 +75,4 @@
               .col-6
                 = simple_format(@culture_result.comment)
 
-= render partial: 'shared/approve_test_result', locals: { result: @microscopy_result, encounter: @encounter }
+= render partial: 'shared/approve_test_result', locals: { result: @culture_result, encounter: @encounter }
