--- a/cdx_core/app/views/dst_lpa_results/show.haml
+++ b/cdx_core/app/views/dst_lpa_results/show.haml
@@ -117,4 +117,4 @@
                   = DstLpaResult.human_attribute_name(:results_other4)
                 = @dst_lpa_result.results_other4
 
-= render partial: 'shared/approve_test_result', locals: { result: @microscopy_result, encounter: @encounter }
+= render partial: 'shared/approve_test_result', locals: { result: @dst_lpa_result, encounter: @encounter }
