Fix removed CSS for alerts

--- a/cdx_core/app/assets/stylesheets/_layout.scss
+++ b/cdx_core/app/assets/stylesheets/_layout.scss
@@ -318,3 +318,28 @@ font-weight:normal !important;
 border-top:0;
 border-bottom:0;
 }
+
+
+.bettertabs {
+  margin:1em 0;
+}
+
+
+.select2-container {
+font-size: 13px;
+}
+
+.select2-search__field {
+  font-style: italic;
+  line-height: 20px;
+}
+
+.select2-container--default .select2-selection--multiple, .select2-container--default .select2-selection--single {
+  border-color: #dddddd;
+  border-radius: 0;
+}
+
+.select2-container--default.select2-container--focus .select2-selection--multiple {
+  border-color: #aaaaaa;
+}
+
