Add csv export info.

--- a/cdx_core/app/views/test_results/_device_results.haml
+++ b/cdx_core/app/views/test_results/_device_results.haml
@@ -16,7 +16,7 @@
           %h3
             = I18n.t('test_results.index.test_result', count: @total)
           %span.table-actions
-            = link_to test_results_path(@device_results.filter.merge(format: :csv)), title: I18n.t('test_results.index.test', count: @total) do
+            = link_to test_results_path(params.merge(format: :csv)), title: I18n.t('test_results.index.test', count: @total) do
               %span.icon-download.icon-gray
         .box-content
           = react_component "TestResultsList", testResults: @device_results.json, orderBy: @device_results.order_by, showSites: @show_sites, showDevices: @show_devices
