--- a/cdx_core/app/views/xpert_results/edit.haml
+++ b/cdx_core/app/views/xpert_results/edit.haml
@@ -5,5 +5,8 @@
         %h3
           = I18n.t('xpert_results.edit.header', patient_name: patient_display_name(@xpert_result.patient.name))
       .col-6
+        %ul
+          %li
+            = link_to I18n.t('views.back'), encounter_path(@encounter, :test_order_page_mode => @return_page_mode), class: 'button new'
     .box-content
       = render 'form'
