--- a/cdx_core/app/views/patients/show.html.haml
+++ b/cdx_core/app/views/patients/show.html.haml
@@ -11,7 +11,7 @@
 
     = render partial: 'patient_episode_summary', locals: { total_episodes: @patient.episodes.count, patient: @patient }
 
-    = render partial: 'patient_history', locals: { patient: @patient, can_add_test_orders: @patient.episodes.count > 0 }
+    = render partial: 'patient_history', locals: { patient: @patient, can_add_test_orders: @patient.active_episodes? }
 
 :javascript
   Mousetrap.bind('alt+t', function(e) {
