--- a/cdx_core/app/assets/javascripts/components/patient_card.js.jsx.erb
+++ b/cdx_core/app/assets/javascripts/components/patient_card.js.jsx.erb
@@ -40,7 +40,7 @@ var PatientCard = React.createClass({
     if (patient == null)
     {
       return (
-        <%= to_jsx(card(image: asset_url('card-unkown.png')) do |c|
+        <%= to_jsx(patient_card(image: asset_url('card-unkown.png')) do |c|
           c.top do
             "No patient information"
           end
@@ -51,7 +51,7 @@ var PatientCard = React.createClass({
     {
       addresscount = 0
       return (
-        <%= to_jsx(card(image: asset_url('card-unkown.png')) do |c|
+        <%= to_jsx(patient_card(image: asset_url('card-unkown.png')) do |c|
           c.top do
             raw <<-JSX
               <ul class="column1">
