Reformat patient layout and add link to patient.

--- a/cdx_core/app/assets/javascripts/components/patient_card.js.jsx.erb
+++ b/cdx_core/app/assets/javascripts/components/patient_card.js.jsx.erb
@@ -90,9 +90,16 @@ var PatientCard = React.createClass({
               </ul>
             JSX
           end
-
+          
           c.actions do
             raw <<-JSX
+            {(function(){
+              return (
+                <div className="patientimagebutton">
+                <a href={"/patients/" + patient.id} title="View Patient">VIEW PATIENT</a>
+                </div>);
+            }.bind(this))()}
+
             {(function(){
               if (!this.props.canEdit) return;
 
@@ -115,5 +122,6 @@ var PatientCard = React.createClass({
         end) %>
       );
     }
+    
   }
 });
