2574, 2573 adding in date and time pickers.

--- a/cdx_core/app/assets/stylesheets/application.scss
+++ b/cdx_core/app/assets/stylesheets/application.scss
@@ -44,3 +44,4 @@
 @import "jquery-ui.structure.min";
 @import "jquery-ui.min";
 @import "jquery-resizable-table-columns";
+@import "jquery-ui-timepicker-addon";
