--- a/cdx_core/app/assets/stylesheets/_layout.scss
+++ b/cdx_core/app/assets/stylesheets/_layout.scss
@@ -355,6 +355,48 @@ font-size: 13px;
 }
 
 
+.button_to .btn-danger{
+  line-height:20px;
+}
+
+.addalertbut{
+  margin-left:15px;
+  margin-top:-50px;
+  line-height:27px;
+}
+
+.alert-container{
+  border:1px solid #ddd;
+  padding:15px;
+  background: rgba(240,167,163,1);
+  background: -moz-linear-gradient(top, rgba(240,167,163,1) 0%, rgba(250,246,245,1) 99%, rgba(250,246,245,1) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(240,167,163,1)), color-stop(99%, rgba(250,246,245,1)), color-stop(100%, rgba(250,246,245,1)));
+  background: -webkit-linear-gradient(top, rgba(240,167,163,1) 0%, rgba(250,246,245,1) 99%, rgba(250,246,245,1) 100%);
+  background: -o-linear-gradient(top, rgba(240,167,163,1) 0%, rgba(250,246,245,1) 99%, rgba(250,246,245,1) 100%);
+  background: -ms-linear-gradient(top, rgba(240,167,163,1) 0%, rgba(250,246,245,1) 99%, rgba(250,246,245,1) 100%);
+  background: linear-gradient(to bottom, rgba(240,167,163,1) 0%, rgba(250,246,245,1) 99%, rgba(250,246,245,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0a7a3', endColorstr='#faf6f5', GradientType=0 );
+  font-size:12px;
+}
+
+.alert-container .alert-error::before { 
+  content: "Error!";
+  font-weight:bold;
+  border-bottom:1px solid red;
+  width:100%;
+  display:block;
+  padding-bottom:5px;
+  margin-bottom:5px;
+  font-size:14px;
+}
+
+.alert-container .alert-error ul li{ 
+  list-style-type: square;
+  margin-left:13px;
+}
+
+
+
 .patientcardholder, .patientcardholder * {
 box-sizing:border-box;
 }
