--- a/cdx_core/app/views/microscopy_results/_form.haml
+++ b/cdx_core/app/views/microscopy_results/_form.haml
@@ -5,7 +5,7 @@
       .col.pe-2
         = f.label :sample_collected_at
       .col
-        = f.date_field :sample_collected_at
+        = f.text_field :sample_collected_at, readonly: true
     .row
       .col.pe-2
         = f.label :specimen_type
@@ -49,7 +49,7 @@
       .col.pe-2
         = f.label :result_at
       .col
-        = f.date_field :result_at
+        = f.text_field :result_at, :class => 'datetimepicker'
     .row
       .col.pe-2
         = f.label :comment
