--- a/cdx_vietnam/app/assets/stylesheets/application.scss
+++ b/cdx_vietnam/app/assets/stylesheets/application.scss
@@ -44,4 +44,5 @@
 @import "jquery-ui.structure.min";
 @import "jquery-ui.min";
 @import "jquery-resizable-table-columns";
+@import "jquery-ui-timepicker-addon";
 @import "special";
