--- a/cdx_core/app/views/notification_recipients/_fieldset.html.haml
+++ b/cdx_core/app/views/notification_recipients/_fieldset.html.haml
@@ -1,4 +1,4 @@
-.notification-recipient-fields
+.generic-fieldset-fields
   .row
     .col
       %div.tooltip
@@ -30,4 +30,4 @@
     .col
       = fieldset.text_field :telephone, placeholder: I18n.t('notification_recipients.form.placeholder.telephone')
 
-  = link_to(image_tag('ic-cross.png'), '', :class => 'notification-recipient-fields__close')
+  = link_to(image_tag('ic-cross.png'), '', :class => 'generic-fieldset-fields__close')
