--- a/cdx_core/app/assets/stylesheets/_forms.scss
+++ b/cdx_core/app/assets/stylesheets/_forms.scss
@@ -255,6 +255,8 @@ body.devise {
 
     @include placeholder($sans, 25px);
     background: image-url('ic-login.png') no-repeat $white;
+    padding-left:12px;
+    font-size:.9em;
 
     &.filled {
       background: $white;
@@ -262,11 +264,11 @@ body.devise {
   }
 
   input[type="email"] {
-    background-position: left top;
+    background-position: 5px top;
   }
 
   input[type="password"] {
-    background-position: left -40px;
+    background-position: 5px -41px;
   }
 }
 
@@ -450,7 +452,7 @@ label.on {
 }
 
 
-/* Select Dropdown Styles */ 
+/* Select Dropdown Styles */
 .testflow .container .Select {
   position:relative;
   border:1px solid #e2e2e2;
@@ -470,7 +472,7 @@ label.on {
   .Select-placeholder {
     margin-top:2px;
     background:#fff;
-    padding:3px 80px 3px 5px;
+    padding:6px 80px 5px 5px;
     font-size:12px;
   }
 
