--- a/cdx_core/app/assets/stylesheets/_forms.scss
+++ b/cdx_core/app/assets/stylesheets/_forms.scss
@@ -255,8 +255,6 @@ body.devise {
 
     @include placeholder($sans, 25px);
     background: image-url('ic-login.png') no-repeat $white;
-    padding-left:12px;
-    font-size:.9em;
 
     &.filled {
       background: $white;
@@ -264,11 +262,11 @@ body.devise {
   }
 
   input[type="email"] {
-    background-position: 5px top;
+    background-position: left top;
   }
 
   input[type="password"] {
-    background-position: 5px -41px;
+    background-position: left -40px;
   }
 }
 
@@ -452,7 +450,7 @@ label.on {
 }
 
 
-/* Select Dropdown Styles */
+/* Select Dropdown Styles */ 
 .testflow .container .Select {
   position:relative;
   border:1px solid #e2e2e2;
@@ -472,7 +470,7 @@ label.on {
   .Select-placeholder {
     margin-top:2px;
     background:#fff;
-    padding:6px 80px 5px 5px;
+    padding:3px 80px 3px 5px;
     font-size:12px;
   }
 
