--- a/cdx_core/app/assets/stylesheets/_reset.scss
+++ b/cdx_core/app/assets/stylesheets/_reset.scss
@@ -1,55 +1,25 @@
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
+/* =============================================================================
+  RESET
+============================================================================= */
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   @include box-sizing(border-box);
 }
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body {
   margin: 0;
   padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
+  height: 100%;
 }
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
+
+img {
+  max-width: 100%;
+  height: auto;
 }
-body {
-  line-height: 1;
-}
-ol, ul {
-  list-style: none;
-}
-blockquote, q {
-  quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
+
 a {
   text-decoration: none;
   outline: 0;
@@ -60,7 +30,15 @@ a {
   }
 }
 
-html, body {
-  height: 100%;
-  -webkit-font-smoothing: subpixel-antialiased;
+ul {
+  margin: 0;
+  padding: 0
+
+}
+
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  list-style-type: none;
 }
