--- a/cdx_core/app/views/culture_results/_form.haml
+++ b/cdx_core/app/views/culture_results/_form.haml
@@ -14,7 +14,7 @@
     .col.pe-2
       = f.label :sample_identifier_id
     .col
-      = f.select :sample_identifier_id, SampleIdentifiers::Presenter.available_samples(@encounter)
+      = f.select :sample_identifier_id, SampleIdentifiers::Finder.available_samples(@encounter)
   .row
     .col.pe-2
       = f.label :test_result, I18n.t('culture_results.form.test_result')
