--- a/cdx_core/app/views/test_results/_filters.haml
+++ b/cdx_core/app/views/test_results/_filters.haml
@@ -8,8 +8,8 @@
     .topfilteropt
       %input#query_button.btn-primary.filtershow(type='button' value="#{I18n.t('test_results.filters.show_filters')}")
 
-  %form.filteroptions#filters-form{action: test_results_path, "data-auto-submit" => true}
-    %input{type: "hidden", name: "page_size", value: @page_size}
+  %form.filteroptions#filters-form{ action: test_results_path, "data-auto-submit" => true }
+    %input{ type: "hidden", name: "page_size", value: @page_size }
     .row.center.custom_filters
       .col.pe-10
 
@@ -18,17 +18,10 @@
         .row
           .filter
             %label.block
-              =I18n.t('test_results.filters.condition')
-            = cdx_select name: "test.assays.condition", value: params["test.assays.condition"] do |select|
-              - select.item "", I18n.t('test_results.filters.show_all')
-              - select.items(@conditions.map { |name| [name.upcase, name] })
-
-          .filter
-            %label.block
               =I18n.t('test_results.filters.result')
-            = cdx_select name: "test.assays.result", value: params["test.assays.result"] do |select|
+            = cdx_select name: "result_type", value: params["result_type"] do |select|
               - select.item "", I18n.t('test_results.filters.show_all')
-              - select.items @results, :value, :label
+              - select.items TestResult.result_type.map {|e| e.reverse }
 
           .filter
             %label.block
@@ -40,31 +33,24 @@
           .filter
             %label.block
               =I18n.t('test_results.filters.date_from')
-            %input#from_date{type: "date", name: "from_date", value: params["from_date"]}
+            %input#from_date{ type: "date", name: "from_date", value: params["from_date"] }
 
           .filter
             %label.block
               =I18n.t('test_results.filters.date_to')
-            %input#to_date{type: "date", name: "to_date", value: params["to_date"]}
-
-          .filter
-            %label.block
-              =I18n.t('test_results.filters.type')
-            = cdx_select name: "test.type", value: params["test.type"] do |select|
-              - select.item "", I18n.t('test_results.filters.show_all')
-              - select.items @test_types
+            %input#to_date{ type: "date", name: "to_date", value: params["to_date"] }
 
           .filter
             %label.block
               =I18n.t('test_results.filters.status')
             = cdx_select name: "test.status", value: params["test.status"] do |select|
               - select.item "", I18n.t('test_results.filters.show_all')
-              - select.items @test_statuses
+              - select.items TestResult.result_status.map {|e| e.reverse }
 
           .filter
             %label.block
               =I18n.t('test_results.filters.sample_id')
-            %input{type: "text", name: "sample.id", value: params["sample.id"]}
+            %input{ type: "text", name: "sample.id", value: params["sample.id"] }
 
           .filter
             %label.block
