--- a/cdx_core/app/views/test_results/_filters.haml
+++ b/cdx_core/app/views/test_results/_filters.haml
@@ -19,42 +19,42 @@
           .filter
             %label.block
               =I18n.t('test_results.filters.result')
-            = cdx_select name: "result_type", value: params["result_type"] do |select|
+            = cdx_select name: "result_type", value: params['result_type'] do |select|
               - select.item "", I18n.t('test_results.filters.show_all')
               - select.items TestResult.result_type.map {|e| e.reverse }
 
           .filter
             %label.block
               =I18n.t('test_results.filters.date')
-            = cdx_select name: "since", value: params["since"] do |select|
+            = cdx_select name: "since", value: params['since'] do |select|
               - select.item "", I18n.t('test_results.filters.show_all')
               - select.items @date_options, :value, :label
 
           .filter
             %label.block
               =I18n.t('test_results.filters.date_from')
-            %input#from_date{ type: "date", name: "from_date", value: params["from_date"] }
+            %input#from_date{ type: "date", name: "from_date", value: params['from_date'] }
 
           .filter
             %label.block
               =I18n.t('test_results.filters.date_to')
-            %input#to_date{ type: "date", name: "to_date", value: params["to_date"] }
+            %input#to_date{ type: "date", name: "to_date", value: params['to_date'] }
 
           .filter
             %label.block
               =I18n.t('test_results.filters.status')
-            = cdx_select name: "test.status", value: params["test.status"] do |select|
+            = cdx_select name: "test.status", value: params['status'] do |select|
               - select.item "", I18n.t('test_results.filters.show_all')
               - select.items TestResult.result_status.map {|e| e.reverse }
 
           .filter
             %label.block
               =I18n.t('test_results.filters.sample_id')
-            %input{ type: "text", name: "sample.id", value: params["sample.id"] }
+            %input{ type: "text", name: "sample.id", value: params['sample_entity'] }
 
           .filter
             %label.block
               =I18n.t('test_results.filters.device')
-            = cdx_select name: "device.uuid", value: params["device.uuid"] do |select|
+            = cdx_select name: "device.uuid", value: params['device_uuid'] do |select|
               - select.item "", I18n.t('test_results.filters.show_all')
               - select.items @devices, :uuid, :name
