--- a/cdx_core/app/views/users/index.haml
+++ b/cdx_core/app/views/users/index.haml
@@ -51,7 +51,7 @@
               = I18n.t('users.index.user', count: @total)
             %span.table-actions
               = link_to users_path(filters_params.merge(format: :csv)), title: I18n.t('users.index.download_csv') do
-                %span.icon-download.icon-gray
+                %span.fa.fa-download
           .box-content
             = react_component "UsersIndexTable", users: Users::Presenter.index_table(@users, @navigation_context), orderBy: @order_by
             .pagination
