fix for encounter alert button

--- a/cdx_core/app/views/encounters/show.html.haml
+++ b/cdx_core/app/views/encounters/show.html.haml
@@ -18,7 +18,7 @@
 
 .row
   .col-6
-    = link_to I18n.t('encounters.show.create_notification'), new_alert_path(encounter_id: @encounter.id), class: 'btn-primary addalertbut'
+    = link_to I18n.t('encounters.show.create_notification'), new_alert_group_path(encounter_id: @encounter.id), class: 'btn-primary addalertbut'
 
 
 - if @encounter.status == 'new'
