--- a/cdx_core/app/views/xpert_results/_form.haml
+++ b/cdx_core/app/views/xpert_results/_form.haml
@@ -4,7 +4,7 @@
     .col.pe-2
       = f.label :sample_collected_at
     .col
-      = f.date_field :sample_collected_at
+      = f.text_field :sample_collected_at, :class => 'datetimepicker'
   .row
     .col.pe-2
       = f.label :sample_identifier_id
@@ -34,7 +34,7 @@
     .col.pe-2
       = f.label :result_at
     .col
-      = f.date_field :result_at
+      = f.text_field :result_at, :class => 'datetimepicker'
   .row
     .col.pe-2
       = f.label :comment
