--- a/cdx_core/app/views/device_messages/index.haml
+++ b/cdx_core/app/views/device_messages/index.haml
@@ -16,7 +16,7 @@
             %header
               = image_tag('img/device.png')
               %h3
-                = I18n.t('test_orders.index.test_order', count: @total)
+                = I18n.t('device_messages.index.message', count: @total)
             .box-content
               = react_component "DeviceMessagesList", deviceMessages: @device_messages, orderBy: @order_by
               .pagination
